--- a/pyproject.toml
+++ b/pyproject.toml
@@ -36,6 +36,7 @@ dependencies = [
 [project.optional-dependencies]
 dev = [
     "pytest>=7.0",
+    "pytest-cov>=7.0.0",
     "black>=22.0",
     "flake8>=4.0",
     "mypy>=0.950",
